[package]

name = "gambling"
version = "0.0.3"
authors = ["Jack Lindamood <jack@signalfuse.com>"]
license = "Apache-2.0"
homepage = "https://github.com/cep21/gambling"
repository = "https://github.com/cep21/gambling"
description = """
Rustlang code for gambling odds generation
"""

[dependencies]
num = "*"
time = "*"

[dependencies.scope_time]
git = "https://github.com/cep21/scope-time"

[dependencies.dynamic_int]
git = "https://github.com/cep21/dynamic-int"
